# my_sgemm

./: CMakeLists.txt  Makefile  build.sh  kernels.cuh  readme  run_kernel_wrapper.cu  run_kernel_wrapper.cuh  sgemm.cu  sgemm.out  sgemm_cublas.cu
kernel/: blocktile_1d_thread.cuh  blocktile_2d_thread.cuh  native.cuh  native_global_coalesce.cuh  shared_memory.cuh
